Revert "AP-22152: Install SuppressingAuthenticator on OSGi service event"
This reverts commit a21a60f35bd7f4553384991ce7eb2f8cd2bf96bf.